Fix allignement of last footer column on mobile

--- a/web.bitRepublic/client/sass/layout/_footer.scss
+++ b/web.bitRepublic/client/sass/layout/_footer.scss
@@ -57,6 +57,10 @@
 }
 
 .main-footer .column:nth-child(7) .column__content {
+  @include breakpoint($sm-only) {
+    margin-top: -4rem;
+  }
+
   @include breakpoint($md) {
     margin-top: -6rem;
   }
